Persist location delivery type
