# backend/python/app/models/enum.py
@@ -32,8 +32,8 @@ class DriveDaysOfWeekEnum(str, Enum):
 
 
 class DeliveryTypeEnum(str, Enum):
-    SCHOOL_YEAR = "School Year"
-    SUMMER = "Summer"
+    SCHOOL = "School"
+    FAMILY = "Family"
 
 
 class RouteStatusEnum(str, Enum):
